syntax = "proto3";
package nucleic.rollapp;

option go_package = "github.com/nucleic-network/nucleic/x/rollapp/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "nucleic/rollapp/params.proto";
import "nucleic/rollapp/rollapp.proto";
import "nucleic/rollapp/state_info.proto";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/nucleic/rollapp/params";
  }
  // Queries a Rollapp by index.
  rpc Rollapp(QueryGetRollappRequest) returns (QueryGetRollappResponse) {
    option (google.api.http).get = "/nucleic/rollapp/rollapp/{rollapp_id}";
  }

  // Queries a Rollapp by index.
  rpc RollappByEIP155(QueryGetRollappByEIP155Request)
      returns (QueryGetRollappResponse) {
    option (google.api.http).get = "/nucleic/rollapp/eip155/{eip155}";
  }

  // Queries a list of Rollapp items.
  rpc RollappAll(QueryAllRollappRequest) returns (QueryAllRollappResponse) {
    option (google.api.http).get = "/nucleic/rollapp/rollapp";
  }

  // Queries a LatestHeight by rollapp-id.
  rpc LatestHeight(QueryGetLatestHeightRequest)
      returns (QueryGetLatestHeightResponse) {
    option (google.api.http).get =
        "/nucleic/rollapp/latest_height/{rollapp_id}";
  }

  // Queries a LatestStateIndex by rollapp-id.
  rpc LatestStateIndex(QueryGetLatestStateIndexRequest)
      returns (QueryGetLatestStateIndexResponse) {
    option (google.api.http).get =
        "/nucleic/rollapp/latest_state_index/{rollapp_id}";
  }

  // Queries a StateInfo by index.
  rpc StateInfo(QueryGetStateInfoRequest) returns (QueryGetStateInfoResponse) {
    option (google.api.http).get =
        "/nucleic/rollapp/state_info/{rollapp_id}/{index}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryGetRollappRequest { string rollapp_id = 1; }

message QueryGetRollappByEIP155Request { uint64 eip155 = 1; }

message QueryGetLatestHeightRequest {
  string rollapp_id = 1;
  bool finalized = 2;
}

message QueryGetLatestHeightResponse { uint64 height = 1; }

message QueryGetLatestStateIndexRequest {
  string rollapp_id = 1;
  bool finalized = 2;
}

message QueryGetLatestStateIndexResponse {
  StateInfoIndex state_index = 1 [ (gogoproto.nullable) = false ];
}

message QueryGetRollappResponse {
  Rollapp rollapp = 1 [ (gogoproto.nullable) = false ];
  // Defines the index of the last rollapp UpdateState.
  StateInfoIndex latest_state_index = 2;
  // Defines the index of the last rollapp UpdateState that was finalized.
  StateInfoIndex latest_finalized_state_index = 3;

  uint64 latest_height = 4;
  uint64 latest_finalized_height = 5;
}

message QueryAllRollappRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRollappResponse {
  repeated RollappSummary rollapp = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetStateInfoRequest {
  string rollapp_id = 1;
  uint64 index = 2;
  uint64 height = 3;
  bool finalized = 4;
}

message QueryGetStateInfoResponse {
  StateInfo state_info = 1 [ (gogoproto.nullable) = false ];
}
