syntax = "proto3";
package nucleic.rollapp;

option go_package = "github.com/nucleic-network/nucleic/x/rollapp/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "nucleic/rollapp/state_info.proto";
import "nucleic/rollapp/bank.proto";

// GenesisAccount is a struct for the genesis account for the rollapp
message GenesisAccount {
  // amount of coins to be sent to the genesis address
  cosmos.base.v1beta1.Coin amount = 1 [ (gogoproto.nullable) = false ];
  // address is a bech-32 address of the genesis account
  string address = 2;
}

// RollappGenesisState is a partial repr of the state the hub can expect the
// rollapp to be in upon genesis
message RollappGenesisState {
  // genesis_accounts is a list of token allocations
  repeated GenesisAccount genesis_accounts = 1;
  // is_genesis_event is a boolean that indicates if the genesis event has
  // occured
  bool is_genesis_event = 2;
}

// Rollapp defines a rollapp object. First the RollApp is created and then
// sequencers can be created and attached. The RollApp is identified by
// rollapp_id
message Rollapp {
  // The unique identifier of the rollapp chain.
  // The rollapp_id follows the same standard as cosmos chain_id.
  string rollapp_id = 1;
  // creator is the bech32-encoded address of the rollapp creator.
  string creator = 2;
  // version is the software and configuration version.
  // starts from 1 and increases by one on every MsgUpdateState
  uint64 version = 3;
  // max_sequencers is the maximum number of sequencers.
  uint64 max_sequencers = 4;
  // permissioned_addresses is a bech32-encoded address list of the sequencers
  // that are allowed to serve this rollapp_id. In the case of an empty list,
  // the rollapp is considered permissionless.
  repeated string permissioned_addresses = 5;
  // token_metadata is a list of TokenMetadata that are registered on this
  // rollapp
  repeated TokenMetadata token_metadata = 6;
  // genesis_state is a partial repr of the state the hub can expect the rollapp
  // to be in upon genesis
  RollappGenesisState genesis_state = 7 [ (gogoproto.nullable) = false ];
  // channel_id will be set to the canonical IBC channel of the rollapp.
  string channel_id = 8;
  // frozen is a boolean that indicates if the rollapp is frozen.
  bool frozen = 9;
}

// Rollapp summary is a compact representation of Rollapp
message RollappSummary {
  // The unique identifier of the rollapp chain.
  // The rollapp_id follows the same standard as cosmos chain_id.
  string rollapp_id = 1;
  // Defines the index of the last rollapp UpdateState.
  StateInfoIndex latest_state_index = 2;
  // Defines the index of the last rollapp UpdateState that was finalized.
  StateInfoIndex latest_finalized_state_index = 3;
}
