syntax = "proto3";
package nucleic.rollapp;

option go_package = "github.com/nucleic-network/nucleic/x/rollapp/types";

import "gogoproto/gogo.proto";
import "nucleic/rollapp/block_descriptor.proto";

// StateInfoIndex is the data used for indexing and retrieving a StateInfo
// it updated and saved with every UpdateState in StateInfo.
// We use the this structure also for:
// 1. LatestStateInfoIndex which defines the rollapps' current (latest) index of
// the last UpdateState
// 2. LatestFinalizedStateIndex which defines the rollapps' current (latest)
// index of the latest StateInfo that was finalized
message StateInfoIndex {
  // rollapp_id is the rollapp that the sequencer belongs to and asking to
  // update it used to identify the what rollapp a StateInfo belongs The
  // rollapp_id follows the same standard as cosmos chain_id
  string rollapp_id = 1;
  // index is a sequential increasing number, updating on each
  // state update used for indexing to a specific state info, the first index is
  // 1
  uint64 index = 2;
}

// StateInfo defines a rollapps' state.
message StateInfo {
  // state_info_index defines what rollapp the state belongs to
  // and in which index it can be referenced
  StateInfoIndex state_info_index = 1 [ (gogoproto.nullable) = false ];
  // sequencer is the bech32-encoded address of the sequencer sent the update
  string sequencer = 2;
  // start_height is the block height of the first block in the batch
  uint64 start_height = 3;
  // num_blocks is the number of blocks included in this batch update
  uint64 num_blocks = 4;
  // da_path is the description of the location on the DA layer
  string da_path = 5;
  // version is the version of the rollapp
  uint64 version = 6;
  // creation_height is the height at which the UpdateState took place
  uint64 creation_height = 7;
  // status is the status of the state update
  Status status = 8;
  // bds is a list of block description objects (one per block)
  // the list must be ordered by height, starting from start_height to
  // start_height+num_blocks-1
  BlockDescriptors bds = 9 [ (gogoproto.nullable) = false ];
}

// StateInfoSummary is a compact representation of StateInfo
message StateInfoSummary {
  // state_info_index defines what rollapp the state belongs to
  // and in which index it can be referenced
  StateInfoIndex state_info_index = 1 [ (gogoproto.nullable) = false ];
  // status is the status of the state update
  Status status = 2;
  // creation_height is the height at which the UpdateState took place
  uint64 creation_height = 3;
}

// BlockHeightToFinalizationQueue defines a map from block height to list of
// states to finalized
message BlockHeightToFinalizationQueue {
  // creation_height is the block height that the state should be finalized
  uint64 creation_height = 1;
  // finalization_queue is a list of states that are waiting to be finalized
  // when the block height becomes creation_height
  repeated StateInfoIndex finalization_queue = 2
      [ (gogoproto.nullable) = false ];
}

// Status of state
enum Status {
  PENDING = 0;
  FINALIZED = 1;
  REVERTED = 3;
}
